Fixed jumping html block in toggle stats.
Free Software Free Society

To support commits by ctubio,
you can buy-me-a-drink with a small git tip at:
  1GitTipgxvKB3zjCLXRcSgDhC9pivkpc7u

I promise to drink chocolate milk in the development of the next commit.

To request new features or in case this commit breaks something for you,
please create a new github issue with all possible details,
but never share your API Keys!

--- a/src/www/sass/bootstrap.scss
+++ b/src/www/sass/bootstrap.scss
@@ -5597,10 +5597,12 @@ address {
   z-index: 3;
   height: 0px !important;
   min-height: 0px !important;
+  padding:0px!important;
 }
 
 .relative-charts {
   height: 339px;
+  padding:0px!important;
 }
 
 address {
